@@ -14,3 +14,7 @@ if [ "$1" = upgrade ] && dpkg --compare-versions "$2" lt 1.2; then
 		fi
 	fi
 fi
+if [ "$1" = upgrade ] && dpkg --compare-versions "$2" lt 3.02; then
+	# replaced by symlink
+	rm -rf /usr/share/doc/ikiwiki/examples
+fi
