@@ -16,6 +16,8 @@ ikiwiki (3.02) UNRELEASED; urgency=low
     the nostromo web server.
   * Recommend libterm-readline-gnu-perl since that makes auto.setup
     behave better.
+  * Add auto-blog.setup, which will set up an ikiwiki instance tuned for use
+    in blogging.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 06 Jan 2009 15:02:52 -0500
 
